2008-08-27  Robert Kroeger  <rjkroege@liqui.org>

        Reviewed by Eric Seidel.

        Test for https://bugs.webkit.org/show_bug.cgi?id=6595

        * fast/events/mouseup-from-button2-expected.txt: Added.
        * fast/events/mouseup-from-button2.html: Added.

2008-08-26  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Eric Seidel

        Linear timing functions should have control points 0, 0, 1, 1.
        https://bugs.webkit.org/show_bug.cgi?id=20535

        * transitions/inherit-other-props-expected.txt:
        * transitions/inherit-other-props.html:

2008-08-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?id=20456

        * http/tests/security/object-literals-expected.txt: Added.
        * http/tests/security/object-literals.html: Added.
        * http/tests/security/resources/object-literals-cross-origin.html: Added.
        * http/tests/security/resources/object-literals-same-origin.html: Added.

2008-08-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Geoff and Cameron.

        <rdar://problem/6174603> Hitting assertion in Register::codeBlock when
        loading facebook (20516).

        - This was a result of my line numbers change.  After a host function is
        called the stack does not get reset correctly.
        - Oddly this also appears to be a slight speedup on SunSpider.

        * fast/js/resources/stack-unwinding.js: Added.
        * fast/js/stack-unwinding-expected.txt: Added.
        * fast/js/stack-unwinding.html: Added.

2008-08-26  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin

        Tests to make sure inaccessible plugins do not appear

        * accessibility/plugin-expected.txt: Added.
        * accessibility/plugin.html: Added.
        * accessibility/resources/test.swf: Added.

2008-08-26  chris fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.
