@@ -1,0 +1,12 @@
+This test checks that the CSSRule RuleTypes for keyframe-related rules are what we expect.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS ruleType is 8
+PASS ruleType is 9
+If we got to this point then we did not crash and the test has passed.
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
