@@ -37,6 +37,8 @@ module css {
         const unsigned short FONT_FACE_RULE = 5;
         const unsigned short PAGE_RULE = 6;
         const unsigned short VARIABLES_RULE = 7;
+        const unsigned short WEBKIT_KEYFRAMES_RULE = 8;
+        const unsigned short WEBKIT_KEYFRAME_RULE = 9;
 
         readonly attribute unsigned short   type;
 
