@@ -1,3 +1,14 @@
+2008-08-28  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Eric Seidel
+
+        Add RuleTypes to CSSRule.idl for keyframes and keyframe rules.
+        https://bugs.webkit.org/show_bug.cgi?id=20552
+
+        Test: animations/animation-css-rule-types.html
+
+        * css/CSSRule.idl:
+
 2008-08-28  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Kevin and Darin.
