@@ -1,3 +1,15 @@
+2008-08-28  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Eric Seidel
+
+        Add RuleTypes to CSSRule.idl for keyframes and keyframe rules.
+        https://bugs.webkit.org/show_bug.cgi?id=20552
+
+        * animations/animation-css-rule-types-expected.txt: Added.
+        * animations/animation-css-rule-types.html: Added.
+        * animations/resources/TEMPLATE.html: Added.
+        * animations/resources/animation-css-rule-types.js: Added.
+
 2008-08-27  Robert Kroeger  <rjkroege@liqui.org>
 
         Reviewed by Eric Seidel.
